# Dictionary

./: .clang-format  .gitignore  CMakeLists.txt  CodingRules.md  README.md  Readme.md
data/: emoji.dict  emojiKeyWord.txt  emojiRandom.txt  emoji_processed.txt  engengKeyWord.txt  engvieKeyWord.txt  slang.dict  slangKeyWord.txt  slangRandom.txt  slang_processed.txt  vieeng.dict  vieengKeyWord.txt  vieengRandom.txt  vieeng_processed.txt
header/: trie.h  word.h
include/dictionary/: build.h  filePathHandler.h  history.h  prebuildTries.h  random.h  searchDefinition.h  trie.h  word.h
include/dictionary/frontend/: dictMain.h  filePath.h  frontendInit.h  global.h  includes.h  palette.h  resources.h  style.h
include/dictionary/frontend/components/: Button.h
include/dictionary/frontend/pages/: history.h
include/dictionary/frontend/paletteColors/: error.h  neutral.h  primary.h  secondary.h  source.h  tertiary.h  utilities.h
include/frontend/: FrontendMain.h  ResourcesLoad.h  styles.h
include/frontend/pages/: Definition.h  Favorites.h  Game.h  History.h  Home.h  SIngleWordInfo.h  SingleWordInfo.h  Word.h
include/global/: global.h
include/globalVars/: globalVars.h
src/: build.cpp  filePathHandler.cpp  history.cpp  main.cpp  random.cpp  trie.cpp  word.cpp
src/dictionary/: build.cpp  filePathHandler.cpp  history.cpp  prebuildTries.cpp  random.cpp  searchDefinition.cpp  trie.cpp  word.cpp
src/frontend/: FrontendMain.cpp  ResourcesLoad.cpp  StyleLoad.cpp  dictMain.cpp  filePath.cpp  frontendInit.cpp  resourceLoad.cpp  windowHeader.cpp
src/frontend/components/: Button.cpp
src/frontend/pages/: Definition.cpp  Favorites.cpp  Game.cpp  History.cpp  Home.cpp  SIngleWordInfo.cpp  SingleWordInfo.cpp  Word.cpp  history.cpp
src/functions/FilePath/: FilePath.cpp  FilePath.h
src/functions/GetWordEmoji/: GetWordEmoji.cpp  GetWordEmoji.h
src/functions/GetWordKaomoji/: GetWordKaomoji.cpp  GetWordKaomoji.h
src/globalVars/: globalVars.cpp
tmp/emoji/: data.dict
tmp/engeng/: history.txt
tmp/slang/: data.dict
tmp/vieeng/: data.dict
visualisations/: CS163-22APCS1-2-Group Project.docx
